# lab3_computerarchitecture

./: CMakeLists.txt  Makefile  function.c  function.h  main.c  ninja.sh
ninjabuildsh/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  function_exe  rules.ninja
